--- a/frontend/src/scss/abstracts/_colors.scss
+++ b/frontend/src/scss/abstracts/_colors.scss
@@ -2,12 +2,12 @@
 // Colors
 //============
 
-$primary: #F9618F;
+$primary: #27436d;
 $secondary: #00142D;
 $accent: #e76f51;
 $heading: #212121;
 $text: #2c3e50;
-$background: #ffffff;
+$background: #e9e9e9;
 $success: #00e676;
 $warning: #ffea00;
 $danger: #ff3d00;
