--- a/frontend/src/scss/abstracts/_fonts.scss
+++ b/frontend/src/scss/abstracts/_fonts.scss
@@ -6,7 +6,7 @@
 
 // family
 $family--serif: Garamond, Times, serif;
-$family--sans: Arial, Helvetica, sans-serif;
+$family--sans: Helvetica, Arial, sans-serif;
 $family--mono: Monaco, Courier, monospace;
 
 // Weights
