--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -32,6 +32,7 @@
 @forward "components/progress";
 @forward "components/table";
 @forward "components/display-image";
+@forward "components/aside-info";
 
 // PAGES
 @forward "pages/home";
