--- a/frontend/src/scss/components/_display-image.scss
+++ b/frontend/src/scss/components/_display-image.scss
@@ -1,11 +1,86 @@
+@use "../abstracts/mixins" as mixin;
+
 .img__feature-sel {
-  height: 95%;
+  height: 42rem;
+  width: 46rem;
   border-radius: 5px;
+  border: 2px solid black;
+  box-shadow: var(--shadow--light);
+  cursor: crosshair;
+
+  &--loading {
+    @include mixin.flex-center;
+    @include mixin.background-cover;
+    background-image: url('../img/icons/svg/loader.svg');
+    background-color: var(--color--secondary--light);
+    opacity: 0.5;
+  }
+
+  &--preload {
+    cursor: pointer;
+    &::before {
+      content: "";
+      position: absolute;
+      opacity: 0;
+      pointer-events: none;
+      left: 50%;
+      transform: translate3d(-50%,0%,0);
+      transition: all .3s ease;
+      transition-delay: 1.2s;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 10px 10px 0 10px;
+      border-color: #282828 transparent transparent transparent;
+    }
+    // TOOLTIP BUBBLE
+    &::after {
+      text-transform: none;
+      content: attr(data-tooltip);
+      font-size: 14px;
+      position: absolute;
+      color: #fff;
+      background: #282828;
+      padding: 8px 12px;
+      width: -webkit-max-content;
+      width: -moz-max-content;
+      width: max-content;
+      max-width: 200px;
+      opacity: 0;
+      pointer-events: none;
+      left: 50%;
+      top: 0;
+      border-radius: 4px;
+      transform: translate3d(-50%,0%,0);
+      transition: all .3s ease;
+      transition-delay: 1.2s;
+    }
+    &:hover {
+      background-color: rgba(0,0,0,0.12);
+      // TOOLTIP FADEIN AND TRANSLATION
+      &::before, &::after {
+        opacity: 1;
+      }
+      &::before {
+        transform: translate3d(-50%,calc(-100% - 18px),0);
+      }
+      &::after {
+        transform: translate3d(-50%,calc(-100% - 16px),0);
+      }
+    } 
+  }
 }
 
-.section__crop {
-  background-color: var(--color--background);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.workload-detection {
+
+  &__section {
+
+    &--crop {
+      background-image: url('../img/metal-texture.jpg');
+      @include mixin.background-cover;
+      @include mixin.flex-center;
+      justify-content: space-evenly;
+    }
+  }
+
 }
