--- a/frontend/src/scss/layout/_footer.scss
+++ b/frontend/src/scss/layout/_footer.scss
@@ -1,10 +1,13 @@
-.footer-victum{
-  display: flex;
-  justify-content: space-around;
-  background-color: var(--color--background--dark);
-  align-items: center;
-  &__description {
-    position: relative;
-    width: 70%;
+.workload-detection {
+
+  &__footer-victum{
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--color--background--dark);
+    align-items: center;
+    &__description {
+      position: relative;
+      width: 70%;
+    }
   }
 }
