--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -33,6 +33,7 @@
 @forward "components/table";
 @forward "components/display-image";
 @forward "components/aside-info";
+@forward "components/toast";
 
 // PAGES
 @forward "pages/home";
